# uploads

./: docker-compose.yml  pyproject.toml
app/: __main__.py  utils.py
app/templates/: show_list.html  upload_file.html
deploy/app/: Dockerfile
