[tool.poetry]
name = "uploads"
version = "0.1.0"
description = ""
authors = ["a-paktusov@yandex.ru <83519069946>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
shortuuid = "^1.0.9"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
